--- a/client/bower.json
+++ b/client/bower.json
@@ -11,7 +11,8 @@
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0"
+    "angular-touch": "^1.4.0",
+    "normalize-css": "normalize.css#^6.0.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
