--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "method-override": "^2.1.3",
         "mongoose": "^4.4.12",
         "morgan": "^1.1.1",
+        "jade": "~1.11.0",
         "autoprefixer-core": "^5.2.1",
         "grunt": "^0.4.5",
         "grunt-angular-templates": "^0.5.7",
